fixed navbar overlapping content on jump to

--- a/bootstrap-override.css
+++ b/bootstrap-override.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 70px;
+}
+
 #body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
